adding some sorting strings from Contacts + a new one for full name

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -273,6 +273,10 @@
     <string name="descending">تنازلي</string>
     <string name="use_for_this_folder">إستخدام لهذا المجلد فقط</string>
     <string name="sort_numeric_parts">فرز أسماء الملفات حسب القيمة الفعلية</string>
+    <string name="first_name">الاسم</string>
+    <string name="middle_name">اسم الأب</string>
+    <string name="surname">الشهرة</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">هل تريد بالتأكيد متابعة عملية الحذف ؟</string>
