--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">Azalan</string>
     <string name="use_for_this_folder">Yalnız bu qovluq üçün işlət</string>
     <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
+    <string name="first_name">Ad</string>
+    <string name="middle_name">Orta Ad</string>
+    <string name="surname">Soyad</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Silmə prosesini təsdiqləyirsiniz?</string>
