--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">Faldende</string>
     <string name="use_for_this_folder">Anvend kun på denne mappe</string>
     <string name="sort_numeric_parts">Sorter nummerisk indhold efter værdi</string>
+    <string name="first_name">Fornavn</string>
+    <string name="middle_name">Mellemnavn</string>
+    <string name="surname">Efternavn</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Er du sikker på at du vil fortsætte med at slette?</string>
