--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">Φθίνουσα</string>
     <string name="use_for_this_folder">Χρήση μόνο σε αυτόν το φάκελο</string>
     <string name="sort_numeric_parts">Αριθμητ. τμήμ. κατά πραγμ. τιμή</string>
+    <string name="first_name">Όνομα</string>
+    <string name="middle_name">Μεσαίο όνομα</string>
+    <string name="surname">Επώνυμο</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Είστε βέβαιοι ότι θέλετε να συνεχίσετε τη διαγραφή?</string>
