--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">Laskeva</string>
     <string name="use_for_this_folder">Käytä vain tässä kansiossa</string>
     <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
+    <string name="first_name">Etunimi</string>
+    <string name="middle_name">Toinen nimi</string>
+    <string name="surname">Sukunimi</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Haluatko varmasti poistaa pysyvästi?</string>
