--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -274,6 +274,10 @@
     <string name="descending">Csökkenő</string>
     <string name="use_for_this_folder">Csak ehhez a mappához használja</string>
     <string name="sort_numeric_parts">Rendezze a numerikus részeket az aktuális értékkel</string>
+    <string name="first_name">Keresztnév</string>
+    <string name="middle_name">Középső név</string>
+    <string name="surname">Vezetéknév</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Biztosan folytatja a törlést?</string>
