--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -272,6 +272,10 @@
     <string name="descending">Turun</string>
     <string name="use_for_this_folder">Gunakan hanya untuk folder ini saja</string>
     <string name="sort_numeric_parts">Urutkan bagian numerik menurut nilai sebenarnya</string>
+    <string name="first_name">Nama depan</string>
+    <string name="middle_name">Nama tengah</string>
+    <string name="surname">Nama belakang</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Apakah anda yakin ingin melanjutkan penghapusan?</string>
