--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">Mažėjančiai</string>
     <string name="use_for_this_folder">Taikyti tik šiam aplankui</string>
     <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
+    <string name="first_name">Vardas</string>
+    <string name="middle_name">Antras vardas</string>
+    <string name="surname">Pavardė</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Ar tikrai norite ištrinti?</string>
