--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">Aflopend</string>
     <string name="use_for_this_folder">Alleen voor deze map gebruiken</string>
     <string name="sort_numeric_parts">Numerieke delen op daadwerkelijke waarde sorteren</string>
+    <string name="first_name">Voornaam</string>
+    <string name="middle_name">Tweede voornaam</string>
+    <string name="surname">Achternaam</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Deze items verwijderen?</string>
