--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">Decrescente</string>
     <string name="use_for_this_folder">Apenas para esta pasta</string>
     <string name="sort_numeric_parts">Ordenar numeros pelo seu valor real</string>
+    <string name="first_name">Primeiro nome</string>
+    <string name="middle_name">Nome do meio</string>
+    <string name="surname">Sobrenome</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Deseja realmente excluir?</string>
