--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -279,6 +279,10 @@
     <string name="descending">По убыванию</string>
     <string name="use_for_this_folder">Только для данной папки</string>
     <string name="sort_numeric_parts">Сортировать числовые части по их значению</string>
+    <string name="first_name">Имя</string>
+    <string name="middle_name">Отчество</string>
+    <string name="surname">Фамилия</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Подтверждение удаления</string>
