--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">За спаданням</string>
     <string name="use_for_this_folder">Використовувати тільки для цієї теки</string>
     <string name="sort_numeric_parts">Сортувати за значенням числової частини</string>
+    <string name="first_name">Ім\'я</string>
+    <string name="middle_name">По-батькові</string>
+    <string name="surname">Прізвище</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Ви впевнені, що хочете продовжити видалення?</string>
