--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">Giảm dần</string>
     <string name="use_for_this_folder">Chỉ sử dụng cho thư mục này</string>
     <string name="sort_numeric_parts">Sắp xếp các phần số theo giá trị thực</string>
+    <string name="first_name">First name</string>
+    <string name="middle_name">Middle name</string>
+    <string name="surname">Surname</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Bạn có chắc chắn muốn tiến hành xóa?</string>
