--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -279,6 +279,10 @@
     <string name="descending">Sestupně</string>
     <string name="use_for_this_folder">Použít pouze pro tuto složku</string>
     <string name="sort_numeric_parts">Řadit číselné sekvence dle hodnoty</string>
+    <string name="first_name">Křestní jméno</string>
+    <string name="middle_name">Prostřední jméno</string>
+    <string name="surname">Příjmení</string>
+    <string name="full_name">Celé jméno</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Opravdu chcete smazat dané soubory/složky?</string>
