--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -287,6 +287,10 @@
     <string name="descending">Disgynnol</string>
     <string name="use_for_this_folder">Defnyddio i\'r ffolder hon yn unig</string>
     <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
+    <string name="first_name">Enw cyntaf</string>
+    <string name="middle_name">Enw canol</string>
+    <string name="surname">Cyfenw</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Wyt ti\'n bendant am barhau i ddileu?</string>
