--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">Descendente</string>
     <string name="use_for_this_folder">Sólo para esta carpeta</string>
     <string name="sort_numeric_parts">Ordenar partes numéricas por su valor</string>
+    <string name="first_name">Primer nombre</string>
+    <string name="middle_name">Segundo nombre</string>
+    <string name="surname">Apellido</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">¿Está seguro de querer continuar con la eliminación?</string>
