--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">Descendente</string>
     <string name="use_for_this_folder">Apenas para esta pasta</string>
     <string name="sort_numeric_parts">Ordenar partes numéricas pelo valor atual</string>
+    <string name="first_name">Primeiro nome</string>
+    <string name="middle_name">Segundo nome</string>
+    <string name="surname">Apelido</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Tem a certeza de que deseja continuar com a eliminação?</string>
