--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -275,6 +275,10 @@
     <string name="descending">Azalan</string>
     <string name="use_for_this_folder">Sadece bu klasör için kullan</string>
     <string name="sort_numeric_parts">Sayısal parçaları gerçek değere göre sırala</string>
+    <string name="first_name">Adı</string>
+    <string name="middle_name">Göbek adı</string>
+    <string name="surname">Soyadı</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Silme işlemine devam etmek istediğinizden emin misiniz?</string>
