--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -272,6 +272,10 @@
     <string name="descending">递减</string>
     <string name="use_for_this_folder">仅应用于此文件夹</string>
     <string name="sort_numeric_parts">按实际值排序数字部分</string>
+    <string name="first_name">名字</string>
+    <string name="middle_name">中间名</string>
+    <string name="surname">姓氏</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">是否执行此删除操作？</string>
