--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -272,6 +272,10 @@
     <string name="descending">遞減</string>
     <string name="use_for_this_folder">僅套用於此資料夾</string>
     <string name="sort_numeric_parts">以實際值來排序數字部分</string>
+    <string name="first_name">名字</string>
+    <string name="middle_name">中間名</string>
+    <string name="surname">姓氏</string>
+    <string name="full_name">Full name</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">確定要進行刪除嗎?</string>
