--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -278,7 +278,7 @@
     <string name="first_name">Voornaam</string>
     <string name="middle_name">Tweede voornaam</string>
     <string name="surname">Achternaam</string>
-    <string name="full_name">Full name</string>
+    <string name="full_name">Volledige naam</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Deze items verwijderen?</string>
