Updated Russian language

--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -282,7 +282,7 @@
     <string name="first_name">Имя</string>
     <string name="middle_name">Отчество</string>
     <string name="surname">Фамилия</string>
-    <string name="full_name">Full name</string>
+    <string name="full_name">Полное имя</string>
 
     <!-- Confirmation dialog -->
     <string name="proceed_with_deletion">Подтверждение удаления</string>
@@ -722,7 +722,7 @@
     <string name="calculator_short">Калькулятор</string>
     <string name="calendar_short">Календарь</string>
     <string name="camera_short">Камера</string>
-    <string name="clock_short">Clock</string>
+    <string name="clock_short">Часы</string>
     <string name="contacts_short">Контакты</string>
     <string name="dialer_short">Dialer</string>
     <string name="draw_short">Рисунки</string>
