adding a new string for hiding year, to be used at contact events

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -321,6 +321,7 @@
     <string name="yesterday">أمس</string>
     <string name="today">اليوم</string>
     <string name="tomorrow">غداً</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">ثوانى</string>
     <string name="minutes_raw">دقائق</string>
     <string name="hours_raw">ساعات</string>
