--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -323,6 +323,7 @@
     <string name="yesterday">Dünən</string>
     <string name="today">Bugün</string>
     <string name="tomorrow">Sabah</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">saniyələr</string>
     <string name="minutes_raw">dəqiqələr</string>
     <string name="hours_raw">saatlar</string>
