--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -335,6 +335,7 @@
     <string name="yesterday">Ddoe</string>
     <string name="today">Heddiw</string>
     <string name="tomorrow">Yfory</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">eiliadau</string>
     <string name="minutes_raw">munudau</string>
     <string name="hours_raw">oriau</string>
