--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -323,6 +323,7 @@
     <string name="yesterday">Onte</string>
     <string name="today">Hoxe</string>
     <string name="tomorrow">Mañá</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">segundos</string>
     <string name="minutes_raw">minutos</string>
     <string name="hours_raw">horas</string>
