--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -322,6 +322,7 @@
     <string name="yesterday">Tegnap</string>
     <string name="today">Ma</string>
     <string name="tomorrow">Holnap</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">másodperc</string>
     <string name="minutes_raw">perc</string>
     <string name="hours_raw">óra</string>
