--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -325,6 +325,7 @@
     <string name="yesterday">Wczoraj</string>
     <string name="today">Dzisiaj</string>
     <string name="tomorrow">Jutro</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">sekundy</string>
     <string name="minutes_raw">minuty</string>
     <string name="hours_raw">godziny</string>
