--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -328,6 +328,7 @@
     <string name="yesterday">Včera</string>
     <string name="today">Dnes</string>
     <string name="tomorrow">Zajtra</string>
+    <string name="hide_year">Ukryť rok</string>
     <string name="seconds_raw">sekundy</string>
     <string name="minutes_raw">minúty</string>
     <string name="hours_raw">hodiny</string>
