--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -322,6 +322,7 @@
     <string name="yesterday">Јуче</string>
     <string name="today">Данас</string>
     <string name="tomorrow">Сутра</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">секунде</string>
     <string name="minutes_raw">минуте</string>
     <string name="hours_raw">сати</string>
