--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -323,6 +323,7 @@
     <string name="yesterday">Χθές</string>
     <string name="today">Σήμερα</string>
     <string name="tomorrow">Αύριο</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">δευτ.</string>
     <string name="minutes_raw">λεπτ.</string>
     <string name="hours_raw">ώρ.</string>
