--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -323,6 +323,7 @@
     <string name="yesterday">Eilen</string>
     <string name="today">Tänään</string>
     <string name="tomorrow">Huomenna</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">sekunnit</string>
     <string name="minutes_raw">minuutit</string>
     <string name="hours_raw">tunnit</string>
