--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -326,6 +326,7 @@
     <string name="yesterday">Jučer</string>
     <string name="today">Danas</string>
     <string name="tomorrow">Sutra</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">sekunde</string>
     <string name="minutes_raw">minute</string>
     <string name="hours_raw">sati</string>
