--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -323,6 +323,7 @@
     <string name="yesterday">Ieri</string>
     <string name="today">Oggi</string>
     <string name="tomorrow">Domani</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">secondi</string>
     <string name="minutes_raw">minuti</string>
     <string name="hours_raw">ore</string>
