--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -319,6 +319,7 @@
     <string name="yesterday">昨日</string>
     <string name="today">今日</string>
     <string name="tomorrow">明日</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">秒</string>
     <string name="minutes_raw">分</string>
     <string name="hours_raw">時間</string>
