--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -323,6 +323,7 @@
     <string name="yesterday">Vakar</string>
     <string name="today">Šiandien</string>
     <string name="tomorrow">Rytoj</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">sekundės</string>
     <string name="minutes_raw">minutės</string>
     <string name="hours_raw">valandos</string>
