--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -328,6 +328,7 @@
     <string name="yesterday">Вчера</string>
     <string name="today">Сегодня</string>
     <string name="tomorrow">Завтра</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">секунд</string>
     <string name="minutes_raw">минут</string>
     <string name="hours_raw">часов</string>
