--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -330,6 +330,7 @@
     <string name="yesterday">Včeraj</string>
     <string name="today">Danes</string>
     <string name="tomorrow">Jutri</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">sekund</string>
     <string name="minutes_raw">minut</string>
     <string name="hours_raw">ur</string>
