--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -323,6 +323,7 @@
     <string name="yesterday">Igår</string>
     <string name="today">Idag</string>
     <string name="tomorrow">Imorgon</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">sekunder</string>
     <string name="minutes_raw">minuter</string>
     <string name="hours_raw">timmar</string>
