--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -323,6 +323,7 @@
     <string name="yesterday">Dün</string>
     <string name="today">Bugün</string>
     <string name="tomorrow">Yarın</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">saniye</string>
     <string name="minutes_raw">dakika</string>
     <string name="hours_raw">saat</string>
