--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -323,6 +323,7 @@
     <string name="yesterday">Вчора</string>
     <string name="today">Сьогодні</string>
     <string name="tomorrow">Завтра</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">секунд</string>
     <string name="minutes_raw">хвилин</string>
     <string name="hours_raw">годин</string>
