--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -323,6 +323,7 @@
     <string name="yesterday">Hôm qua</string>
     <string name="today">Hôm nay</string>
     <string name="tomorrow">Ngày mai</string>
+    <string name="hide_year">Hide year</string>
     <string name="seconds_raw">giây</string>
     <string name="minutes_raw">phút</string>
     <string name="hours_raw">giờ</string>
