--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -323,7 +323,7 @@
     <string name="yesterday">Gisteren</string>
     <string name="today">Vandaag</string>
     <string name="tomorrow">Morgen</string>
-    <string name="hide_year">Hide year</string>
+    <string name="hide_year">Jaartal verbergen</string>
     <string name="seconds_raw">seconden</string>
     <string name="minutes_raw">minuten</string>
     <string name="hours_raw">uren</string>
