--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -323,7 +323,7 @@
     <string name="yesterday">Ahir</string>
     <string name="today">Avui</string>
     <string name="tomorrow">Demà</string>
-    <string name="hide_year">Hide year</string>
+    <string name="hide_year">Amagar any</string>
     <string name="seconds_raw">segons</string>
     <string name="minutes_raw">minuts</string>
     <string name="hours_raw">hores</string>
