--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -635,7 +635,7 @@
     <string name="follow_us">Síguenos</string>
     <string name="copyright">v %1$s\nCopyright © Simple Mobile Tools %2$d</string>
     <string name="additional_info">Información adicional</string>
-    <string name="app_version"Versión da app: %s</string>
+    <string name="app_version">Versión da app: %s</string>
     <string name="device_os">SO do dispositivo: %s</string>
     <string name="donate_please">
         <![CDATA[
