--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -220,6 +220,7 @@
     <string name="app_icon_color_warning">AVISO: Algúns lanzadores non manexan ben a personalización do icono das aplicacións. Se o icono desaparece, intenta inicia-la aplicación mediante o Google Play ou algún widget, se está dispoñible.
         Unha vez que a inicies, volve a axustar o icono ao laranxa por defecto #F57C00. No peor dos casos, pode que teñas que volver a instalar a aplicación.</string>
     <string name="share_colors_success">Cores actualizadas correctamente. Engadiuse un novo tema chamado \'Compartido\'. Utilízao para actualizar as cores de tódalas aplicacións no futuro.</string>
+    <string name="shared_theme_note">Note that even though you are using the Pro app version, you still need Simple Thank You for technical reasons. It takes care of the color synchronization.</string>
     <string name="purchase_thank_you">
         <![CDATA[
             Por favor, compra <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> para desbloquear esta función e axudar co desenvolvemento. Gracias!
