--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -218,6 +218,7 @@
     <string name="apply_to_all_apps">تطبيق الألوان على جميع التطبيقات المشتركة</string>
     <string name="app_icon_color_warning">تحذير: بعض اللانشرات لا تتعامل مع تخصيص أيقونة التطبيق بشكل صحيح. في حالة إختفاء الأيقونة، حاول تشغيل التطبيق من خلال   "Google Play" أو بعض عناصر (الويدجت)، إذا كانت متوفرة.  بمجرد تشغيله، قم فقط بتعيين الأيقونة البرتقالية الإفتراضية #F57C00. قد تضطر الي إعادة تثبيت التطبيق في أسوأ الأحوال.</string>
     <string name="share_colors_success">تم تحديث الألوان بنجاح. تمت إضافة سمة جديدة تسمى \ المشتركة \' ، يرجى إستخدام ذلك لتحديث جميع ألوان التطبيق في المستقبل.</string>
+    <string name="shared_theme_note">Note that even though you are using the Pro app version, you still need Simple Thank You for technical reasons. It takes care of the color synchronization.</string>
     <string name="purchase_thank_you">
         <![CDATA[
              يرجى شراء<a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Thank You</a> لفتح هذه الوظيفة ودعم التطوير. شكراً!
